<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Data Recorder"
        android:id="@+id/display"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/grid">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            android:id="@+id/stop"
            android:layout_row="7"
            android:layout_column="0"
            android:onClick="stoprec"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butstand"
            android:id="@+id/butstand"
            android:layout_row="7"
            android:layout_column="5"
            android:onClick="standing"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butjog"
            android:id="@+id/butjog"
            android:layout_row="8"
            android:layout_column="5"
            android:onClick="jogging"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butwalk"
            android:id="@+id/butwalk"
            android:layout_row="9"
            android:layout_column="0"
            android:onClick="walk"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butsleep"
            android:id="@+id/butsleep"
            android:layout_row="9"
            android:layout_column="5"
            android:onClick="sleep1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butrun"
            android:id="@+id/butrun"
            android:layout_row="10"
            android:layout_column="0"
            android:onClick="running"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butup"
            android:id="@+id/butup"
            android:layout_row="10"
            android:layout_column="5"
            android:onClick="upstairs"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk"
            android:id="@+id/walk"
            android:layout_row="11"
            android:layout_column="0"
            android:onClick="walk2"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/butdown"
            android:id="@+id/butdown"
            android:layout_row="11"
            android:layout_column="5"
            android:onClick="downstairs"/>

    </GridLayout>
</RelativeLayout>
